# HaskellStudy

./: HaskellStudy.cabal
.devcontainer/: devcontainer.json
test/: MainSpec.hs
